some details in the article
darcs-hash:20060418140413-2fc9d-165bf780cd6b9e3db7d7fabb4a9e096f0e923d0d.gz

--- a/article/Article.tex
+++ b/article/Article.tex
@@ -1181,8 +1181,11 @@ to record. It is better to create one patch for each feature or bug
 fix, rather than one big patch for all your current changes.
 
   \item \verb$darcs send$ to send by email the patches you have recorded with
-\verb$darcs record$.
-% TODO: which email adress ??
+\verb$darcs record$. Please send your patches to the WrapITK bugtracker
+(wrapitk-bugmaster@jouy.inra.fr\footnote{Note that you must have an account to
+be able to send something to the bug tracker. Visit
+\url{http://voxel.jouy.inra.fr/roundup/wrapitk/} to create one.}) so everyone
+would be able to find it easily.
 
 \end{itemize}
 
@@ -1214,8 +1217,9 @@ previous work done on wrapping system - without it WrapITK would not be there.
 
 ITK is a great library, with the drawback to be nearly unusable for prototyping,
 and to have a poor support for other languages than C++. WrapITK address those
-issue and finally give to ITK a quite good support for python. We hope that support
-will soon be extended to tcl and java.
+issue and finally give to ITK a good support for python. Java and Tcl, while
+not as much tweaked than python part, also take benefit of the higher number of
+wrapped classes, and of the increase of consistency in available types and names 
 
 
 
