--- a/article/Article.tex
+++ b/article/Article.tex
@@ -1072,8 +1072,7 @@ Simply type \verb$make install$ (or run your IDE's install step) to install the
 external project into the WrapITK tree (provided WrapITK has already been
 installed). Now the external project can be used just like any of the other
 WrapITK libraries, and it will be imported into the \verb$itk$ namespace when the
-\verb$import itk$ command is issued from Python. (This can be disabled by setting
-\verb$WRAPPER_LIBRARY_AUTO_LOAD$ to \verb$OFF$ in the external project's \verb$CMakeLists.txt$.)
+\verb$import itk$ command is issued from Python.
 
     \subsubsection{Top-level CMakeLists for external projects}
 In addition to having a set of \verb$wrap_XXX.cmake$ files and the proper
