add precisions about external projects and ipython prompt and add a full python example
darcs-hash:20060612203858-2fc9d-be9516d2481247d46b76776c724ad684573975b0.gz

--- a/article/Article.bib
+++ b/article/Article.bib
@@ -107,6 +107,10 @@
   howpublished = "\url{http://roundup.sourceforge.net}"
 }
 
+@misc{SciPyWebSite,
+  howpublished = "\url{http://www.scipy.org}"
+}
+
 @misc{WebSite,
   howpublished = "\url{}"
 }
